Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetImpartedMovementBaseVelocity(UCharacterMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetImpartedMovementBaseVelocity());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetLedgeMove(UCharacterMovementComponent* Self, INT_PTR OldLocation, INT_PTR Delta, INT_PTR GravDir)
	{
		auto& _p0 = *(FVector*)OldLocation;
		auto& _p1 = *(FVector*)Delta;
		auto& _p2 = *(FVector*)GravDir;
		return (INT_PTR) new FVector(Self->GetLedgeMove(_p0, _p1, _p2));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxAcceleration(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxAcceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxBrakingDeceleration(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxBrakingDeceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxJumpHeight(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxJumpHeight();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMaxJumpHeightWithJumpTime(UCharacterMovementComponent* Self)
	{
		return Self->GetMaxJumpHeightWithJumpTime();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMinAnalogSpeed(UCharacterMovementComponent* Self)
	{
		return Self->GetMinAnalogSpeed();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetModifiedMaxAcceleration(UCharacterMovementComponent* Self)
	{
		return Self->GetModifiedMaxAcceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMovementBase(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetMovementBase());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetMovementName(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetMovementName());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetNetworkSafeRandomAngleDegrees(UCharacterMovementComponent* Self)
	{
		return Self->GetNetworkSafeRandomAngleDegrees();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetPerchRadiusThreshold(UCharacterMovementComponent* Self)
	{
		return Self->GetPerchRadiusThreshold();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetServerLastTransformUpdateTimeStamp(UCharacterMovementComponent* Self)
	{
		return Self->GetServerLastTransformUpdateTimeStamp();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetSimulationTimeStep(UCharacterMovementComponent* Self, float RemainingTime, int32 Iterations)
	{
		auto _p0 = RemainingTime;
		auto _p1 = Iterations;
		return Self->GetSimulationTimeStep(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetValidPerchRadius(UCharacterMovementComponent* Self)
	{
		return Self->GetValidPerchRadius();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetWalkableFloorAngle(UCharacterMovementComponent* Self)
	{
		return Self->GetWalkableFloorAngle();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetWalkableFloorZ(UCharacterMovementComponent* Self)
	{
		return Self->GetWalkableFloorZ();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HandlePendingLaunch(UCharacterMovementComponent* Self)
	{
		return Self->HandlePendingLaunch();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HandleSlopeBoosting(UCharacterMovementComponent* Self, INT_PTR SlideResult, INT_PTR Delta, float Time, INT_PTR Normal, INT_PTR Hit)
	{
		auto& _p0 = *(FVector*)SlideResult;
		auto& _p1 = *(FVector*)Delta;
		auto _p2 = Time;
		auto& _p3 = *(FVector*)Normal;
		auto& _p4 = *(FHitResult*)Hit;
		return (INT_PTR) new FVector(((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->HandleSlopeBoosting_WRAP(_p0, _p1, _p2, _p3, _p4));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HandleSwimmingWallHit(UCharacterMovementComponent* Self, INT_PTR Hit, float DeltaTime)
	{
		auto& _p0 = *(FHitResult*)Hit;
		auto _p1 = DeltaTime;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->HandleSwimmingWallHit_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HasRootMotionSources(UCharacterMovementComponent* Self)
	{
		return Self->HasRootMotionSources();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HasValidData(UCharacterMovementComponent* Self)
	{
		return Self->HasValidData();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ImmersionDepth(UCharacterMovementComponent* Self)
	{
		return Self->ImmersionDepth();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsMovementInProgress(UCharacterMovementComponent* Self)
	{
		return Self->IsMovementInProgress();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsValidLandingSpot(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, INT_PTR Hit)
	{
		auto& _p0 = *(FVector*)CapsuleLocation;
		auto& _p1 = *(FHitResult*)Hit;
		return Self->IsValidLandingSpot(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsWalkable(UCharacterMovementComponent* Self, INT_PTR Hit)
	{
		auto& _p0 = *(FHitResult*)Hit;
		return Self->IsWalkable(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsWalking(UCharacterMovementComponent* Self)
	{
		return Self->IsWalking();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsWithinEdgeTolerance(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, INT_PTR TestImpactPoint, float CapsuleRadius)
	{
		auto& _p0 = *(FVector*)CapsuleLocation;
		auto& _p1 = *(FVector*)TestImpactPoint;
		auto _p2 = CapsuleRadius;
		return Self->IsWithinEdgeTolerance(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_JumpOff(UCharacterMovementComponent* Self, AActor* MovementBaseActor)
	{
		auto _p0 = MovementBaseActor;
		Self->JumpOff(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_JumpOutOfWater(UCharacterMovementComponent* Self, INT_PTR WallNormal)
	{
		auto _p0 = *(FVector*)WallNormal;
		Self->JumpOutOfWater(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_ComputeFloorDist(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, float LineDistance, float SweepDistance, float SweepRadius, INT_PTR FloorResult)
	{
		auto _p0 = *(FVector*)CapsuleLocation;
		auto _p1 = LineDistance;
		auto _p2 = SweepDistance;
		auto _p3 = SweepRadius;
		auto& _p4 = *(FFindFloorResult*)FloorResult;
		Self->K2_ComputeFloorDist(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_FindFloor(UCharacterMovementComponent* Self, INT_PTR CapsuleLocation, INT_PTR FloorResult)
	{
		auto _p0 = *(FVector*)CapsuleLocation;
		auto& _p1 = *(FFindFloorResult*)FloorResult;
		Self->K2_FindFloor(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetModifiedMaxAcceleration(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetModifiedMaxAcceleration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetWalkableFloorAngle(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetWalkableFloorAngle();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_K2_GetWalkableFloorZ(UCharacterMovementComponent* Self)
	{
		return Self->K2_GetWalkableFloorZ();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_Launch(UCharacterMovementComponent* Self, INT_PTR LaunchVel)
	{
		auto& _p0 = *(FVector*)LaunchVel;
		Self->Launch(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_LimitAirControl(UCharacterMovementComponent* Self, float DeltaTime, INT_PTR FallAcceleration, INT_PTR HitResult, bool bCheckForValidLandingSpot)
	{
		auto _p0 = DeltaTime;
		auto& _p1 = *(FVector*)FallAcceleration;
		auto& _p2 = *(FHitResult*)HitResult;
		auto _p3 = bCheckForValidLandingSpot;
		return (INT_PTR) new FVector(((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->LimitAirControl_WRAP(_p0, _p1, _p2, _p3));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_MaintainHorizontalGroundVelocity(UCharacterMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->MaintainHorizontalGroundVelocity_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_MaybeSaveBaseLocation(UCharacterMovementComponent* Self)
	{
		Self->MaybeSaveBaseLocation();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_MaybeUpdateBasedMovement(UCharacterMovementComponent* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->MaybeUpdateBasedMovement(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_MoveAutonomous(UCharacterMovementComponent* Self, float ClientTimeStamp, float DeltaTime, uint8 CompressedFlags, INT_PTR NewAccel)
	{
		auto _p0 = ClientTimeStamp;
		auto _p1 = DeltaTime;
		auto _p2 = CompressedFlags;
		auto& _p3 = *(FVector*)NewAccel;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->MoveAutonomous_WRAP(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_NewFallVelocity(UCharacterMovementComponent* Self, INT_PTR InitialVelocity, INT_PTR Gravity, float DeltaTime)
	{
		auto& _p0 = *(FVector*)InitialVelocity;
		auto& _p1 = *(FVector*)Gravity;
		auto _p2 = DeltaTime;
		return (INT_PTR) new FVector(Self->NewFallVelocity(_p0, _p1, _p2));
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_NotifyJumpApex(UCharacterMovementComponent* Self)
	{
		Self->NotifyJumpApex();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnCharacterStuckInGeometry(UCharacterMovementComponent* Self, INT_PTR Hit)
	{
		auto _p0 = (FHitResult*)Hit;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnCharacterStuckInGeometry_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnClientTimeStampResetDetected(UCharacterMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnClientTimeStampResetDetected_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnMovementModeChanged(UCharacterMovementComponent* Self, EMovementMode PreviousMovementMode, uint8 PreviousCustomMode)
	{
		auto _p0 = PreviousMovementMode;
		auto _p1 = PreviousCustomMode;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnMovementModeChanged_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnMovementUpdated(UCharacterMovementComponent* Self, float DeltaSeconds, INT_PTR OldLocation, INT_PTR OldVelocity)
	{
		auto _p0 = DeltaSeconds;
		auto& _p1 = *(FVector*)OldLocation;
		auto& _p2 = *(FVector*)OldVelocity;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnMovementUpdated_WRAP(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnTimeDiscrepancyDetected(UCharacterMovementComponent* Self, float CurrentTimeDiscrepancy, float LifetimeRawTimeDiscrepancy, float Lifetime, float CurrentMoveError)
	{
		auto _p0 = CurrentTimeDiscrepancy;
		auto _p1 = LifetimeRawTimeDiscrepancy;
		auto _p2 = Lifetime;
		auto _p3 = CurrentMoveError;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnTimeDiscrepancyDetected_WRAP(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnUnableToFollowBaseMove(UCharacterMovementComponent* Self, INT_PTR DeltaPosition, INT_PTR OldLocation, INT_PTR MoveOnBaseHit)
	{
		auto& _p0 = *(FVector*)DeltaPosition;
		auto& _p1 = *(FVector*)OldLocation;
		auto& _p2 = *(FHitResult*)MoveOnBaseHit;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnUnableToFollowBaseMove_WRAP(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PackNetworkMovementMode(UCharacterMovementComponent* Self)
	{
		return Self->PackNetworkMovementMode();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PerformAirControlForPathFollowing(UCharacterMovementComponent* Self, INT_PTR Direction, float ZDiff)
	{
		auto _p0 = *(FVector*)Direction;
		auto _p1 = ZDiff;
		Self->PerformAirControlForPathFollowing(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PerformMovement(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->PerformMovement_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PhysCustom(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->PhysCustom_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PhysFalling(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		Self->PhysFalling(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PhysFlying(UCharacterMovementComponent* Self, float deltaTime, int32 Iterations)
	{
		auto _p0 = deltaTime;
		auto _p1 = Iterations;
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->PhysFlying_WRAP(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PhysicsRotation(UCharacterMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		Self->PhysicsRotation(_p0);
	}